<resources>
    <string name="app_name">QR Code Matcher</string>

    <string name="scan_label">SCAN LABEL</string>
    <string name="not_match">NOT MATCH!</string>
    <string name="match">MATCH</string>
    <string name="settings">Settings</string>
    <string name="upload">Upload</string>

    <string name="small_label">Small Label</string>
    <string name="big_label">Big Label</string>

    <string name="manual">Manual Entry</string>
    <string name="scanned">Scanned</string>
    <string name="ct_nr">Ct.Nr</string>
    <string name="part_nr">PartNr</string>
    <string name="d_nr">D-Nr</string>
    <string name="qtty">Qtty</string>

    <string name="c_name">C.Name</string>
    <string name="cust_n">Cust-N</string>
    <string name="order_nr">OrderNr</string>

    <string name="view_data">View Data</string>
    <string name="next">Next</string>
    <string name="new_button">New</string>
    <string name="reset">Reset</string>
    <string name="quit">Quit</string>

    <!--  Settings Dialog -->
    <string name="ftp_server">FTP Server</string>
    <string name="smb_server">SMB Server</string>
    <string name="ftp_server_address">FTP Server Address</string>
    <string name="host_address">Host Address</string>
    <string name="smb_address">Connect to Server</string>
    <string name="port">Port</string>
    <string name="shared_folder">Shared Folder</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="test_connection">Test Connection</string>

    <!-- Add label dialog -->
    <string name="add_label">Add label</string>
    <string name="add">Add</string>
    <string name="clear">Clear</string>

</resources>