<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingVertical="20dp">

        <TextView
            android:id="@+id/txtScanLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/settings_title"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingVertical="4dp"
            android:paddingHorizontal="22dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:paddingHorizontal="6dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/host"
                android:layout_margin="6dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtHostAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:nextFocusForward="@+id/txtPortNumber"
                    android:textAlignment="center"
                    android:textSize="14sp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/port"
                android:layout_margin="6dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtPortNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:imeOptions="actionNext"
                    android:nextFocusForward="@+id/txtUserName"
                    android:textAlignment="center"
                    android:textSize="14sp"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:paddingHorizontal="6dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/username"
                android:layout_margin="6dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:nextFocusForward="@id/txtPassword"
                    android:textAlignment="center"
                    android:textSize="14sp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/password"
                android:layout_margin="6dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:imeOptions="actionDone"
                    android:textAlignment="center"
                    android:textSize="14sp"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <CheckBox
                android:id="@+id/checkboxManual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:nextFocusForward="@id/txtCtNr"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/manual"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="normal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSave"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/save"
                android:textSize="18sp"
                android:textAllCaps="true"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:layout_marginStart="20dp"
                android:text="@string/cancel"
                android:textSize="18sp"
                android:textAllCaps="false" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>
